--- a/styles/courses.css
+++ b/styles/courses.css
@@ -11,10 +11,7 @@ h2,
 h3,
 h4,
 h5,
-h6,
-p,
-ol,
-ul {
+h6 {
   margin: 0;
   padding: 0;
   font-weight: normal;
@@ -516,4 +513,21 @@ ol.sections-name .lesson-details {
   font-size: 24px;
   line-height: 24px;
   padding: 0px 5px;
+}
+
+code,
+pre code {
+  padding: .5rem;
+}
+
+code,
+pre code,
+pre code.hljs {
+  background-color: var(--emphasized-bg);
+  color: #000;
+}
+
+pre code,
+pre code.hljs {
+  display: block;
 }
