Adds styles fro the copy code to clipboard functionality.

--- a/styles/courses.css
+++ b/styles/courses.css
@@ -531,3 +531,52 @@ pre code,
 pre code.hljs {
   display: block;
 }
+
+pre {
+    position: relative;
+}
+
+.div-copy {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.div-copy .tooltip-copy::after {
+    content: "";
+    position: absolute;
+    right: 100%;
+    margin-right: -4px;
+    top: 60%;
+    transform: translateY(-50%);
+    border-style: solid;
+    border-width: 2px 2px 5px 8px;
+    border-color: transparent transparent transparent #444;
+    opacity: 0;
+    transition: opacity .3s;
+}
+
+.div-copy .tooltip-copy::before {
+  content: "Copied";
+  position: absolute;
+  top: 60%;
+  transform: translateY(-50%);
+  right: 100%;
+  margin-right: 5px;
+  padding: 2px 7px;
+  border-radius: 5px;
+  background: #444;
+  color: #fff;
+  text-align: center;
+  opacity: 0;
+  transition: opacity .3s;
+}
+
+.div-copy .tooltip-copy {
+    margin-right: 0.3em;
+    margin-top: 0.3em;
+}
+
+.div-copy.clicked .tooltip-copy::before, .div-copy.clicked .tooltip-copy::after {
+    opacity: 1;
+}
