--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,6 +3,8 @@
   --secondary: #93aca7;
   --highlight: #224159;
 
+  --lesson-text: rgb(8, 8, 8);
+
   --text-header: var(--primary);
   --text-main-headers: var(--highlight);
   --text-links: #007bff;
@@ -22,4 +24,65 @@
 
   --emphasized-bg: #dce8ff;
   --emphasized-border: #aab6d2;
+
+  /* #darkicon {
+  visibility: visible;
+ }
+
+ #lighticon {
+  visibility: hidden;
+ } */
+}
+
+ @media (prefers-color-scheme: dark) {
+  :root {
+  --primary: #224159;
+  --secondary: #93aca7;
+  --highlight: #dfa067;
+
+  --text-header: var(--primary);
+  --text-main-headers: var(--highlight);
+  --text-links: #ff6f00;
+  --text-footer: var(--highlight);
+
+  --lesson-text: rgb(218, 218, 218);
+
+  --bg-main: #1f1f1f;
+  --bg-dots: var(--highlight);
+  --bg-lesson: #323232;
+  --nav-buttons: var(--highlight);
+  --nav-buttons-text: var(--primary);
+
+  --corner-active: var(--highlight);
+  --corner-inactive: #2a2a2a;
+  --icons: var(--primary);
+  --footer-icons: var(--highlight);
+
+  --emphasized-bg: #dce8ff;
+  --emphasized-border: #5a6c89;
+  }
+
+  .lesson-title {
+  color: var(--highlight);
+  }
+
+  .lesson-section-title {
+    color: var(--primary);
+  }
+ 
+ .terms {
+  color: var(--highlight);
+ }
+
+ li {
+  color: var(--highlight);
+ }
+
+ #darkicon {
+  visibility: hidden;
+ }
+
+ #lighticon {
+  visibility: visible;
+ }
 }
